latest version of the token

--- a/vivaflix/.env
+++ b/vivaflix/.env
@@ -6,4 +6,4 @@ ALLOWED_HOSTS=localhost,127.0.0.1
 
 CLOUD_NAME=dg8zpaybw
 API_KEY=281943938813234
-'API_SECRET'=A2KTf2gFS68caHeBAYKcrwXfHQ4
+API_SECRET=A2KTf2gFS68caHeBAYKcrwXfHQ4
